Devel::Cover history

{{$NEXT}}
 - Fix segv in constant folding of xor ops (gitbub 40).
 - Fix various problems running Devel::Cover under tainting (github 41).

Release 0.99 - 31 December 2012
 - Improve documentation (Olaf Alders) (github 34).
 - Thank Bytemark for the cpancover server.
 - Test against 5.17.7.
 - Provide coverage for subs removed from the symbol table (rt 13207).

Release 0.98 - 25 November 2012
 - Fix links on html_basic report.
 - Fix setting Inc under taint mode (Guillaume Aubert) (guthub 26, 33).
 - Test against 5.17.6.
 - Improve warnings from Devel::Cover and reduce duplicates.
 - Make cover -test -nodelete work.
 - Run cpancover with 5.16.2.
 - Prefer bugs on github rather than RT.

Release 0.97 - 10 November 2012
 - Filter paths contained in CWD out of @Inc (Christian Walde) (github 32).
 - Test against 5.12.5, 5.14.3, 5.16.2, and 5.17.5.
 - Improve parallelism for cpancover.

Release 0.96 - 24 September 2012
 - JSON:PP should have been JSON::PP (Paul Hirst) (github 28).
 - Correct when some new tests should be skipped.
 - Quieten some debugging output.
 - Fix infinite loop during global destruction (github 29).

Release 0.95 - 22 September 2012
 - Fix loss of condition coverage data when first operand calls into ignored
   file (Celogeek, Christian Walde) (rt 63090) (github 15, 20).
 - Fix similar problem with branch coverage (Robert Freimuth) (rt 72027).
 - More similar problems (Brian Cassidy, Florian Ragwitz, Heikki J Laaksonen)
   (rt 63698).
 - Test against 5.17.4.

Release 0.94 - 18 September 2012
 - Officially support 5.16.1.
 - Manage mod_perl2 setting $^X to httpd.
 - Make changes to support 5.17.3.

Release 0.93 - 4 August 2012
 - Fix up start and finish times in text report.
 - Make summary cover report respect options given.
 - Make vim report respect specified criteria (rt 38258).
 - Only collect time and condition coverage when requested.
 - Fix some "ignoring extra $criterion" errors.