@@ -3,6 +3,8 @@ Devel::Cover history
 {{$NEXT}}
  - Fix segv in constant folding of xor ops (gitbub 40).
  - Fix various problems running Devel::Cover under tainting (github 41).
+ - Add JavaScript to filter results in html_basic (David Cantrell) (github 42).
+   Use -norestrict option to keep previous behaviour.
 
 Release 0.99 - 31 December 2012
  - Improve documentation (Olaf Alders) (github 34).
